1. Improve tools/proxy/client: Increase max recv size 2. Improve tools/proxy/proxy: Put command into a temporary file to solve redirction not working problem 3. Improve tools/.config 4. Improve tools/proxy/.config

--- a/tools/proxy/.config
+++ b/tools/proxy/.config
@@ -1,11 +1,18 @@
 ---
 proxy:
+  # common
+  auth: '$ROOT/../proxy/auth/'
+
+  # proxy
+  sep1: '||||||||||'
+  sep2: '??????????'
+  maxTimeDiff: 60
+  maxRead: 999999
+
+  # client
   port: 54321
   parallel: 4
   timeout: 120
   portCkTimeout: 0.2
-  auth: '$ROOT/../proxy/auth/'
-  sep1: '||||||||||'
-  sep2: '??????????'
-  maxTimeDiff: 60
+  maxRecv: 999999
   passwd: 'password'
