--- a/tools/.config
+++ b/tools/.config
@@ -1,10 +1,7 @@
 ---
 proxy:
-  port: 54321
-  parallel: 4
-  timeout: 120
-  portCkTimeout: 0.2
   auth: '$ROOT/proxy/auth/'
   sep1: '||||||||||'
   sep2: '??????????'
   maxTimeDiff: 60
+  maxRead: 999999
